fixed overflow issues

--- a/src/style/media-queries.scss
+++ b/src/style/media-queries.scss
@@ -35,3 +35,9 @@
     }
 
 }
+
+@media (max-width: $breakpoint-small-phone) {
+    .header-text h1 {
+        font-size: 4em !important;
+    }
+}
