--- a/src/style/variables.scss
+++ b/src/style/variables.scss
@@ -9,3 +9,4 @@ $bright-blue: #66fcf1;
 $blue: #45a29e;
 
 $breakpoint-phone: 600px;
+$breakpoint-small-phone: 315px;
